Fixed the scrollbar (made it full size all the time - less confusing).

--- a/styles/atom.less
+++ b/styles/atom.less
@@ -24,8 +24,8 @@ atom-workspace {
 	}
 
 	/deep/ ::-webkit-scrollbar-thumb {
-		border-radius: 5px;
-		border: 3px solid @scrollbar-background-color;
+		//border-radius: 5px;
+		//border: 3px solid @scrollbar-background-color;
 		background: @scrollbar-color;
 		background-clip: content-box;
 	}
